fix/feat: Remove controllers and update app
- Controllers removed as were redundant and causing confusion.
- Add readDouble method to input utils
- Updated App.java to use services.
- Added methods to App.java (displaySellerMenu, displayAdminMenu) - could use cleanup but focused on functionality.
- Pom updated to contain postgres dependencies - **NOTE: project will only work using maven. Will not work by java compilation**